Add server.js File and Refactor files to be accessed from correct file path
Refactor Webpack Config to generate bundle in js folder of Client
Add Express, Morgan, and Body-Parser to package JSON
Move data.json to be accessed through the Client

 Changes to be committed:
	new file:   Client/data/data.json
	modified:   Client/index.html
	modified:   Client/js/App.js
	new file:   Client/js/bundle.js
	modified:   package.json
	modified:   public/data.json
	new file:   server.js
	modified:   webpack.config.js

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/chououtside/turbo-happiness#readme",
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "morgan": "^1.7.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-intl": "^2.1.5"
