--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "morgan": "^1.7.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
-    "react-intl": "^2.1.5"
+    "react-intl": "^2.1.5",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
