--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "morgan": "^1.7.0",
+    "pg": "^6.1.0",
+    "pg-hstore": "^2.3.2",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-intl": "^2.1.5",
     "react-redux": "^4.4.5",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "sequelize": "^3.24.8"
   },
   "devDependencies": {
     "babel": "^6.5.2",
