--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-dom": "^15.3.1",
     "react-intl": "^2.1.5",
     "react-redux": "^4.4.5",
+    "react-router": "^3.0.2",
     "redux": "^3.6.0",
+    "redux-promise": "^0.5.3",
     "sequelize": "^3.24.8"
   },
   "devDependencies": {
