Add react/jsx-no-bind Rule to Allow Arrow Functions in the eslint config file
 Changes to be committed:
	modified:   .eslintrc.json

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,10 @@
 {
-  "extends": ["standard", "standard-react"]
+  "extends": ["standard", "standard-react"],
+	"rules": {
+		"react/jsx-no-bind": [2, {
+		  "ignoreRefs": true,
+		  "allowArrowFunctions": true,
+		  "allowBind": true
+		}]
+	}
 }
