--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^4.4.5",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.0",
     "redux-promise": "^0.5.3",
     "sequelize": "^3.24.8"
   },
