--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-intl": "^2.1.5",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.2",
+    "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.0",
     "redux-form": "^6.5.0",
