--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "body-parser": "^1.15.2",
+    "datejs": "^1.0.0-rc3",
     "express": "^4.14.0",
     "lodash": "^4.17.4",
     "morgan": "^1.7.0",
